--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
-#landing {
-  background-image: url('/assets/home-img.jpg');
+.landing-image {
+  background-image: url('./assets/home-img.jpg');
+  background-size: cover;
 }
